# kinetgraph

./: .gitignore  .pyright-baseline.json  .radon-baseline.json  .radon-baseline.json.license  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEBT.md  GETTING_STARTED.md  NOTICE  README.md  REFERENCE.md  SECURITY.md  pyproject.toml  pyrightconfig.json  pyrightconfig.json.license  scratch_replace_redis_url.py  scratch_run_all.py  uv.lock.license
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.reuse/: REUSE.toml
ADRs/: ADR-001-Arquitetura.md  ADR-002-ArquiteturaEvolve.md  ADR-002-Replay-Puro.md  ADR-003-Arquitetura-AgenticAnalytics.md  ADR-003-Ciclo-Dual.md  ADR-004-Memory-Tools-Knowledge.md  ADR-005-Checkpoints-Idempotency.md  ADR-006-Tool-Role-Separation.md  ADR-007-LiteLLM-Adapter.md  ADR-008-Caching-Transport.md  ADR-009-Tool-Tiers.md  ADR-010-Memory-Business-Tier.md  ADR-011-Cache-Backend-Pluggable.md  ADR-012-IntentRouter-HTTP-Gateway.md  ADR-013-Semantic-Routing-GLiNER2.md  ADR-014-Continuity-Tier.md  ADR-015-fmh_office-vertical.md  ADR-016-Event-Signing.md  ADR-017-Identity-Authorization.md  ADR-018-WorldIncremental-WorldSystem.md  ADR-019-Epilogo-Typed-Adapters.md  ADR-019-Redis-Adapter-Typing.md  ADR-024-FalkorDBClient-GraphClient-Migration.md  ADR-025-Tool-Protocol-Split-Cycle-Resolution.md  ADR-026-Close-GLiNER2-Binding-Leak.md  ADR-027-Argument-Extraction-Migration.md  ADR-028-Delete-Argument-Extraction-Vertical.md  ADR-029-LiteFalkorDBClient-to-LiteGraphClient.md  ADR-030-LLMTransport-as-Callable.md  ADR-031-GraphLike-Deletion.md  ADR-032-LLMClient-Deletion.md  ADR-033-GraphPool-Reorg.md  ADR-034-ToolCall-ECS-Components.md  ADR-035-sharding-and-dispatcher-coordination-for-horizontal-scaling.md  ADR-036-Open-Source-KntGraph.md  ADR-036-Tool-Worker-Pattern.md  ADR-037-Mandatory-Correlation-Propagation.md  ADR-038-CLI-Boilerplate-Generator.md  ADR-039-Role-rethinking-and-intentions-routing.md  ADR-040-Messaging-Adapter-Intent-Ingestion.md  (+8 more)
dev-servers/falkordb/: docker-compose.yml
dev-servers/redis/: docker-compose.yml
dev-servers/redis/config/: redis.conf
docs/: README.md  adr-042-sequence.md  architecture.md  checkpoints.md  cli_guide.md  consolidation.md  dead_letter_queue.md  ecs.md  embedding.md  event_sourcing.md  graphrag.md  memory_model.md  quality.md  query.md  quickstart.md  resilience.md  routing.md  tools.md
docs/analysis/: fmh_agents_consistency.md
docs/security/: README.md  anchor.md  authorization.md  signing.md  threat_model.md
examples/: 01_llm_basic.py  02_llm_with_rate_limit.py  03_role_usage.py  04_reactive_system_with_llm.py  05_session_chat.py  05b_session_chat_ecs.py  05c_session_chat_ecs_roles.py  06_profile_preferences.py  07_caching_transport.py  08_falkordb_projection.py  09_knowledge_consolidation.py  10_http_intent_router.py  11_tool_invoker.py  12_semantic_routing.py  13_multi_agent.py  14_sales_logistics.py  15_audit_supervisor.py  16_continuity_recency.py  17_graphrag_retrieval.py  18_security_signing.py  19_tool_worker_pattern.py  20_security_authorization.py  README.md
examples/_lib/: redis_or_fake.py
examples/knt-cli/weather_platform/: .env.example  pyproject.toml
examples/knt-cli/weather_platform/src/weather_platform/: main.py
examples/knt-cli/weather_platform/src/weather_platform/contexts/weather/: dispatcher.py
examples/knt-cli/weather_platform/src/weather_platform/contexts/weather/agents/: weather_agent.py
examples/knt-cli/weather_platform/src/weather_platform/contexts/weather/components/: location_intent.py
examples/knt-cli/weather_platform/src/weather_platform/contexts/weather/events/: weather_resolved.py
examples/knt-cli/weather_platform/src/weather_platform/contexts/weather/systems/: weather_router_system.py
examples/knt-cli/weather_platform/src/weather_platform/contexts/weather/tools/: open_meteo_api.py
scripts/: ci.py  export_kntgraph.py  migrate_principals.py  migrate_profile_to_continuity.py  quality_report.py  readme_stats.py  update_pyright_baseline.py
src/kntgraph/: _optional.py
src/kntgraph/agents/: __init__.py
src/kntgraph/api/: __init__.py  middleware.py  schemas.py
src/kntgraph/cli/: __init__.py  main.py
src/kntgraph/core/: __init__.py  _typing.py  agent_id.py  archetype.py  component.py  lifecycle.py  long_poll.py  storage.py  system.py  tool_event.py
src/kntgraph/events/: __init__.py
src/kntgraph/infra/: __init__.py  checkpoint.py  hashing.py  world_checkpoint.py
src/kntgraph/knowledge/: __init__.py
src/kntgraph/memory/: __init__.py  base.py  cache_warmer.py  consolidation.py  profile.py  session.py
src/kntgraph/resilience/: __init__.py  bulkhead.py  circuit_breaker.py  edge.py  fallback.py  rate_limit.py  retry.py  timeout.py
src/kntgraph/runner/: __init__.py  reactive.py  reactive_tool_projection.py  runner.py  tool_call_ttl_sweeper.py
src/kntgraph/security/: __init__.py  principal.py
src/kntgraph/stream/: __init__.py  projection.py
src/kntgraph/testing/: __init__.py  embedding.py
src/kntgraph/tools/: __init__.py  acl.py  descriptors.py  llm_transport.py  manager.py  protocol.py  registry.py  router.py  schema.py  system.py  worker.py
tests/: README_FALKORDB_TESTS.md  __init__.py  conftest.py
tests/agents/: __init__.py  conftest.py
tests/agents/integration/: __init__.py  conftest.py
tests/agents/unit/: __init__.py  _fake_transport.py  conftest.py  test_example_05b_shim.py  test_optional.py
tests/integration/: __init__.py  conftest.py  test_dlq.py  test_event_log.py  test_reactive_dispatcher.py  test_runner.py
tests/integration/knowledge/: test_falkordb_projection.py
tests/unit/: __init__.py  test_agent_id.py  test_agent_id_validation.py  test_archetype.py  test_component.py  test_core_view_world.py  test_event.py  test_event_class_validation.py  test_event_shape_validation.py  test_fallback.py  test_import_graph_no_cycle.py  test_lifecycle.py  test_llm_client_deleted.py  test_long_poll.py  test_optional.py  test_railway.py  test_storage.py  test_system.py  test_tool_event.py  test_world.py
tests/unit/api/: _fake_log.py  (+3 more)
(+351 files in other folders)
