[project]
name = "weather_platform"
version = "0.1.0"
description = "A Kinetgraph Agent Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kntgraph @ file:///home/adriano/Projects/kinetgraph/kinetgraph",
    "kntgraph[api] @ file:///home/adriano/Projects/kinetgraph/kinetgraph",
    "kntgraph[cli] @ file:///home/adriano/Projects/kinetgraph/kinetgraph",
    "kntgraph[crypto] @ file:///home/adriano/Projects/kinetgraph/kinetgraph",
    "uvicorn",
    "httpx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"